# agent-kit

./: .gitignore  AGENTS.md
.agents/skills/api-design/: SKILL.md
.agents/skills/backend-patterns/: SKILL.md
.agents/skills/coding-standards/: SKILL.md
.agents/skills/documentation-lookup/: SKILL.md
.agents/skills/mcp-server-patterns/: SKILL.md
.agents/skills/python-patterns/: SKILL.md
.agents/skills/python-testing/: SKILL.md
.agents/skills/security-review/: SKILL.md  cloud-infrastructure-security.md
.agents/skills/tdd-workflow/: SKILL.md
.agents/skills/verification-loop/: SKILL.md
.codex/: aan-install-state.json  config.toml
.codex/agents/: architect.toml  build_error_resolver.toml  code_architect.toml  code_explorer.toml  code_reviewer.toml  code_simplifier.toml  doc_updater.toml  docs_lookup.toml  performance_optimizer.toml  planner.toml  pr_test_analyzer.toml  python_reviewer.toml  pytorch_build_resolver.toml  refactor_cleaner.toml  security_reviewer.toml  silent_failure_hunter.toml  tdd_guide.toml  type_design_analyzer.toml
x-com/: .gitignore  DESIGN.md  README.md  pyproject.toml
x-com/src/x_com/: __init__.py  cli.py  client.py  config.py  errors.py  mcp.py  models.py  service.py
x-com/tests/: test_cli.py  test_client.py  test_config.py  test_mcp.py  test_models.py  test_service.py
