[project]
name = "agentkit-x-com"
version = "0.1.0"
description = "AgentKit tool for fetching X.com posts through CLI and MCP."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["mcp>=1.0", "pydantic>=2.0"]

[project.scripts]
x-com = "x_com.cli:main"
x-com-mcp = "x_com.mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/x_com"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=7.0",
    "ruff>=0.14",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
